--- a/styles.css
+++ b/styles.css
@@ -154,3 +154,47 @@ button {
         opacity: 0;
     }
 }
+
+#iloveyoulist {
+    list-style: none;
+    padding: 0;
+    display: flex; /* Use flexbox for the container */
+    flex-wrap: wrap; /* Allow items to wrap to the next line */
+    justify-content: space-around;
+}
+
+.phrase-item {
+    background-color: #e83e8c; /* Pink background color */
+    color: white;
+    padding: 15px;
+    margin: 10px 0;
+    border-radius: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow for depth */
+    transition: transform 0.3s ease-in-out;
+}
+
+.phrase-item:hover {
+    transform: scale(1.05); /* Add a subtle scale effect on hover */
+}
+
+.phrase-item p {
+    margin: 0;
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+.top-photo {
+    max-width: 100%; /* Set the maximum width to ensure responsiveness */
+    height: auto; /* Automatically adjust the height to maintain aspect ratio */
+    width: 300px; /* Set the desired width */
+    border-radius: 8px; /* Add rounded corners to the photo */
+    margin-bottom: 20px; /* Add spacing between the photo and the heading */
+    -webkit-transform:rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    transform: rotate(180deg);
+}
