--- a/styles.css
+++ b/styles.css
@@ -158,9 +158,9 @@ button {
 #iloveyoulist {
     list-style: none;
     padding: 0;
-    display: flex; /* Use flexbox for the container */
-    flex-wrap: wrap; /* Allow items to wrap to the next line */
-    justify-content: space-around;
+    /*display: flex; /* Use flexbox for the container 
+    flex-wrap: wrap; /* Allow items to wrap to the next line 
+    justify-content: space-around;*/
 }
 
 .phrase-item {
